# quibble

./: .gitmodules  CMakeLists.txt  Makefile  OVMF_CODE.fd  OVMF_CODE64.fd  README.md  clang-amd64.cmake  clang-x86.cmake  mingw-amd64.cmake  mingw-x86.cmake
.github/workflows/: build-amd64.yml  build-x86.yml  cmake.yml  mingw-amd64.yml  mingw-x86.yml
amd64/: Makefile
arch/amd64/: Makefile.inc
arch/x86/: Makefile.inc
freetype/: CMakeLists.txt
freetype/builds/cmake/: FindHarfBuzz.cmake
freetype/builds/windows/vc2010/: freetype.vcxproj  freetype.vcxproj.filters
freetype/devel/: ftoption.h
freetype/include/freetype/config/: ftconfig.h  ftmodule.h  ftoption.h  ftstdlib.h
freetype/src/base/: ftbase.c  ftobjs.c
freetype/src/sfnt/: sfobjs.c
gnu-efi/: efiapi.h  efidevp.h  efierr.h  efilink.h  efiprot.h  efishell.h
gnu-efi/ia32/: efibind.h
gnu-efi/x86_64/: efibind.h
src/: apiset.c  apiset.cpp  boot.c  boot.cpp  config.h.in  debug.c  debug.cpp  font.s  font8x8_basic.h  hw.c  hw.cpp  mem.c  mem.cpp  menu.c  menu.cpp  misc.c  misc.cpp  misc.h  peload.c  peload.cpp  peload.h  peloaddef.h  print.c  print.cpp  print.h  quibble.asm  quibble.h  quibbleproto.h  reg.c  reg.cpp  reg.h  tinymt32.cpp  tinymt32.h  win.h  winreg.h  x86.h
src/btrfs/: btrfs.c  crc32c.c  lzo.c  xxhash.c
src/btrfs/zstd/: fse_decompress.c
x86/: Makefile
